--- a/client/src/components/forms.css
+++ b/client/src/components/forms.css
@@ -1,7 +1,3 @@
-* {
-  outline: 1px solid red;
-}
-
 body {
   background-color: black;
   color: white;
@@ -125,6 +121,10 @@ h3 {
 
   .title {
     width: 90%;
+  }
+
+  h1 {
+    width: 75%;
   }
 
   h3 {
