--- a/client/src/components/forms.css
+++ b/client/src/components/forms.css
@@ -121,10 +121,18 @@ h3 {
 
   .title {
     width: 90%;
+    padding-top: 3rem;
   }
 
   h1 {
     width: 75%;
+    font-size: 1rem;
+  }
+
+  .nav button {
+    border: 0;
+    padding: 0;
+    width: 30%;
   }
 
   h3 {
